homework_1_k8s_1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw-1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-hw-1-web
  template:
    metadata:
      labels:
        app: otus-hw-1-web
    spec:
      containers:
      - name: otus-hw-1-web
        image: egrischatkina/otus_hw_1:v2
        ports:
          - name: web
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /health/
            port: web
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readiness/
            port: web
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 2
