homework_1_k8s_1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw-1-service
spec:
  selector:
    app: otus-hw-1-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
