homework_1_k8s_1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw-1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /otusapp/egrishatkina(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-hw-1-service
              port:
                number: 8000
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: otus-hw-1-service
#              port:
#                number: 8000
